me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDslParser.java
package me.tomassetti.idea.parser.antlr.internal;

import org.eclipse.xtext.idea.parser.AbstractPsiAntlrParser;
import me.tomassetti.idea.lang.AstTransformationsDslElementTypeProvider;
import org.eclipse.xtext.idea.parser.TokenTypeProvider;
import org.eclipse.xtext.parser.antlr.XtextTokenStream;
import org.eclipse.xtext.parser.antlr.XtextTokenStream.HiddenTokens;
import me.tomassetti.services.AstTransformationsDslGrammarAccess;

import com.intellij.lang.PsiBuilder;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class PsiInternalAstTransformationsDslParser extends AbstractPsiAntlrParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_STRING", "RULE_ID", "RULE_INT", "RULE_ML_COMMENT", "RULE_SL_COMMENT", "RULE_WS", "RULE_ANY_OTHER", "'adapt'", "'enum'", "'{'", "'}'", "'abstract'", "'type'", "'extends'", "'from'", "'*='", "'?='", "'='", "'string'", "'int'", "'boolean'"
    };
    public static final int RULE_STRING=4;
    public static final int RULE_SL_COMMENT=8;
    public static final int T__19=19;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int EOF=-1;
    public static final int RULE_ID=5;
    public static final int RULE_WS=9;
    public static final int RULE_ANY_OTHER=10;
    public static final int RULE_INT=6;
    public static final int T__22=22;
    public static final int RULE_ML_COMMENT=7;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__20=20;
    public static final int T__21=21;

    // delegates
    // delegators


        public PsiInternalAstTransformationsDslParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PsiInternalAstTransformationsDslParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PsiInternalAstTransformationsDslParser.tokenNames; }
    public String getGrammarFileName() { return "../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g"; }



    	protected AstTransformationsDslGrammarAccess grammarAccess;

    	protected AstTransformationsDslElementTypeProvider elementTypeProvider;

    	public PsiInternalAstTransformationsDslParser(PsiBuilder builder, TokenStream input, AstTransformationsDslElementTypeProvider elementTypeProvider, AstTransformationsDslGrammarAccess grammarAccess) {
    		this(input);
    		setPsiBuilder(builder);
        	this.grammarAccess = grammarAccess;
    		this.elementTypeProvider = elementTypeProvider;
    	}

    	@Override
    	protected String getFirstRuleName() {
    		return "Model";
    	}




    // $ANTLR start "entryRuleModel"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:52:1: entryRuleModel : ruleModel EOF ;
    public final void entryRuleModel() throws RecognitionException {
        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:52:15: ( ruleModel EOF )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:53:2: ruleModel EOF
            {
             markComposite(elementTypeProvider.getModelElementType()); 
            pushFollow(FOLLOW_ruleModel_in_entryRuleModel54);
            ruleModel();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_entryRuleModel57); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "entryRuleModel"


    // $ANTLR start "ruleModel"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:58:1: ruleModel : ( ( (lv_antlr_0_0= ruleAntlrGrammarRef ) ) ( (lv_declarations_1_0= ruleDeclaration ) )* ) ;
    public final void ruleModel() throws RecognitionException {
        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:58:10: ( ( ( (lv_antlr_0_0= ruleAntlrGrammarRef ) ) ( (lv_declarations_1_0= ruleDeclaration ) )* ) )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:59:2: ( ( (lv_antlr_0_0= ruleAntlrGrammarRef ) ) ( (lv_declarations_1_0= ruleDeclaration ) )* )
            {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:59:2: ( ( (lv_antlr_0_0= ruleAntlrGrammarRef ) ) ( (lv_declarations_1_0= ruleDeclaration ) )* )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:60:3: ( (lv_antlr_0_0= ruleAntlrGrammarRef ) ) ( (lv_declarations_1_0= ruleDeclaration ) )*
            {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:60:3: ( (lv_antlr_0_0= ruleAntlrGrammarRef ) )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:61:4: (lv_antlr_0_0= ruleAntlrGrammarRef )
            {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:61:4: (lv_antlr_0_0= ruleAntlrGrammarRef )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:62:5: lv_antlr_0_0= ruleAntlrGrammarRef
            {

            					markComposite(elementTypeProvider.getModel_AntlrAntlrGrammarRefParserRuleCall_0_0ElementType());
            				
            pushFollow(FOLLOW_ruleAntlrGrammarRef_in_ruleModel89);
            ruleAntlrGrammarRef();

            state._fsp--;


            					doneComposite();
            				

            }


            }

            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:71:3: ( (lv_declarations_1_0= ruleDeclaration ) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==12||(LA1_0>=15 && LA1_0<=16)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:72:4: (lv_declarations_1_0= ruleDeclaration )
            	    {
            	    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:72:4: (lv_declarations_1_0= ruleDeclaration )
            	    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:73:5: lv_declarations_1_0= ruleDeclaration
            	    {

            	    					markComposite(elementTypeProvider.getModel_DeclarationsDeclarationParserRuleCall_1_0ElementType());
            	    				
            	    pushFollow(FOLLOW_ruleDeclaration_in_ruleModel127);
            	    ruleDeclaration();

            	    state._fsp--;


            	    					doneComposite();
            	    				

            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ruleModel"


    // $ANTLR start "entryRuleAntlrGrammarRef"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:86:1: entryRuleAntlrGrammarRef : ruleAntlrGrammarRef EOF ;
    public final void entryRuleAntlrGrammarRef() throws RecognitionException {
        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:86:25: ( ruleAntlrGrammarRef EOF )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:87:2: ruleAntlrGrammarRef EOF
            {
             markComposite(elementTypeProvider.getAntlrGrammarRefElementType()); 
            pushFollow(FOLLOW_ruleAntlrGrammarRef_in_entryRuleAntlrGrammarRef159);
            ruleAntlrGrammarRef();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_entryRuleAntlrGrammarRef162); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "entryRuleAntlrGrammarRef"


    // $ANTLR start "ruleAntlrGrammarRef"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:92:1: ruleAntlrGrammarRef : (otherlv_0= 'adapt' ( (lv_grammarFile_1_0= RULE_STRING ) ) ) ;
    public final void ruleAntlrGrammarRef() throws RecognitionException {
        Token otherlv_0=null;
        Token lv_grammarFile_1_0=null;

        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:92:20: ( (otherlv_0= 'adapt' ( (lv_grammarFile_1_0= RULE_STRING ) ) ) )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:93:2: (otherlv_0= 'adapt' ( (lv_grammarFile_1_0= RULE_STRING ) ) )
            {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:93:2: (otherlv_0= 'adapt' ( (lv_grammarFile_1_0= RULE_STRING ) ) )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:94:3: otherlv_0= 'adapt' ( (lv_grammarFile_1_0= RULE_STRING ) )
            {

            			markLeaf(elementTypeProvider.getAntlrGrammarRef_AdaptKeyword_0ElementType());
            		
            otherlv_0=(Token)match(input,11,FOLLOW_11_in_ruleAntlrGrammarRef181); 

            			doneLeaf(otherlv_0);
            		
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:101:3: ( (lv_grammarFile_1_0= RULE_STRING ) )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:102:4: (lv_grammarFile_1_0= RULE_STRING )
            {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:102:4: (lv_grammarFile_1_0= RULE_STRING )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:103:5: lv_grammarFile_1_0= RULE_STRING
            {

            					markLeaf(elementTypeProvider.getAntlrGrammarRef_GrammarFileSTRINGTerminalRuleCall_1_0ElementType());
            				
            lv_grammarFile_1_0=(Token)match(input,RULE_STRING,FOLLOW_RULE_STRING_in_ruleAntlrGrammarRef208); 

            					doneLeaf(lv_grammarFile_1_0);
            				

            }


            }


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ruleAntlrGrammarRef"


    // $ANTLR start "entryRuleDeclaration"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:116:1: entryRuleDeclaration : ruleDeclaration EOF ;
    public final void entryRuleDeclaration() throws RecognitionException {
        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:116:21: ( ruleDeclaration EOF )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:117:2: ruleDeclaration EOF
            {
             markComposite(elementTypeProvider.getDeclarationElementType()); 
            pushFollow(FOLLOW_ruleDeclaration_in_entryRuleDeclaration239);
            ruleDeclaration();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_entryRuleDeclaration242); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "entryRuleDeclaration"


    // $ANTLR start "ruleDeclaration"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:122:1: ruleDeclaration : ( ruleNodeType | ruleNamedEnumDeclaration ) ;
    public final void ruleDeclaration() throws RecognitionException {
        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:122:16: ( ( ruleNodeType | ruleNamedEnumDeclaration ) )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:123:2: ( ruleNodeType | ruleNamedEnumDeclaration )
            {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:123:2: ( ruleNodeType | ruleNamedEnumDeclaration )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=15 && LA2_0<=16)) ) {
                alt2=1;
            }
            else if ( (LA2_0==12) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:124:3: ruleNodeType
                    {

                    			markComposite(elementTypeProvider.getDeclaration_NodeTypeParserRuleCall_0ElementType());
                    		
                    pushFollow(FOLLOW_ruleNodeType_in_ruleDeclaration259);
                    ruleNodeType();

                    state._fsp--;


                    			doneComposite();
                    		

                    }
                    break;
                case 2 :
                    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:132:3: ruleNamedEnumDeclaration
                    {

                    			markComposite(elementTypeProvider.getDeclaration_NamedEnumDeclarationParserRuleCall_1ElementType());
                    		
                    pushFollow(FOLLOW_ruleNamedEnumDeclaration_in_ruleDeclaration279);
                    ruleNamedEnumDeclaration();

                    state._fsp--;


                    			doneComposite();
                    		

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "ruleDeclaration"


    // $ANTLR start "entryRuleNamedEnumDeclaration"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:143:1: entryRuleNamedEnumDeclaration : ruleNamedEnumDeclaration EOF ;
    public final void entryRuleNamedEnumDeclaration() throws RecognitionException {
        try {
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:143:30: ( ruleNamedEnumDeclaration EOF )
            // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:144:2: ruleNamedEnumDeclaration EOF
            {
             markComposite(elementTypeProvider.getNamedEnumDeclarationElementType()); 
            pushFollow(FOLLOW_ruleNamedEnumDeclaration_in_entryRuleNamedEnumDeclaration299);
            ruleNamedEnumDeclaration();

            state._fsp--;

            match(input,EOF,FOLLOW_EOF_in_entryRuleNamedEnumDeclaration302); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "entryRuleNamedEnumDeclaration"


    // $ANTLR start "ruleNamedEnumDeclaration"
    // ../me.tomassetti.asttransf.idea/src-gen/me/tomassetti/idea/parser/antlr/internal/PsiInternalAstTransformationsDsl.g:149:1: ruleNamedEnumDeclaration : (otherlv_0= 'enum' ( (lv_name_1_0= RULE_ID ) ) otherlv_2= '{' ( (lv_values_3_0= ruleEnumNodeTypeFieldValue ) )+ otherlv_4= '}' ) ;
    public final void ruleNamedEnumDeclaration() throws RecognitionException {
        Token otherlv_0=null;
        Token lv_name_1_0=null;
        Token otherlv_2=null;
        Token otherlv_4=null;
